[gd_scene load_steps=4 format=3 uid="uid://dy1ru48p06lmr"]

[ext_resource type="Script" uid="uid://dxcgsa3iygtui" path="res://scripts/UI/training_room.gd" id="1_r1ea3"]
[ext_resource type="PackedScene" uid="uid://1ry85xqrtjd3" path="res://scenes/setting.tscn" id="2_7xe4g"]
[ext_resource type="PackedScene" uid="uid://bp1th31aar6d4" path="res://scenes/game.tscn" id="2_k5emf"]

[node name="TrainingRoom" type="Node2D"]
script = ExtResource("1_r1ea3")
setting_scene = ExtResource("2_7xe4g")

[node name="MainScreen" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Buttoncontainer" type="MarginContainer" parent="MainScreen"]
layout_mode = 2

[node name="Game" parent="MainScreen/Buttoncontainer" instance=ExtResource("2_k5emf")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menucontainer" type="MarginContainer" parent="CanvasLayer"]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Menucontainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menucontainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="Control" type="Control" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="seperator" type="Control" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingButton" type="Button" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Setting"

[node name="Control2" type="Control" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LeaveButton" type="Button" parent="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Leave"

[connection signal="pressed" from="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menucontainer/PanelContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
